force-app/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign lookup should be dependent field for Campaign referral</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>New Clients</relationshipLabel>
    <relationshipName>New_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>