force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>New client prioritization</inlineHelpText>
    <label>Prospect Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
                <default>true</default>
                <label>Hot</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>