force-app/main/default/objects/Lead/fields/CCApprovalRejectionRecommendation__c.field-meta.xml
<CustomField>
    <fullName>CCApprovalRejectionRecommendation__c</fullName>
    <description>It depicts the Approval / Rejection recommendation status.</description>
    <inlineHelpText>Client Council Recommendations</inlineHelpText>
    <label>CC_Approval / Rejection Recommendation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>