force-app/main/default/objects/Lead/fields/Chairman_Name__c.field-meta.xml
<CustomField>
    <fullName>Chairman_Name__c</fullName>
    <inlineHelpText>Chairman of the new client</inlineHelpText>
    <label>Chairman Name</label>
    <type>TextArea</type>
</CustomField>