force-app/main/default/objects/Lead/fields/Chamber_contacts__c.field-meta.xml
<CustomField>
    <fullName>Chamber_contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Chamber / Association contact who has referred the new client</inlineHelpText>
    <label>Chamber contacts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Chamber__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Clients (Chamber contacts)</relationshipLabel>
    <relationshipName>New_Clients2</relationshipName>
    <type>Lookup</type>
</CustomField>