force-app/main/default/objects/Lead/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which Client Name has referred this Lead.</description>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Client Name)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>