force-app/main/default/objects/Lead/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <inlineHelpText>New client CapIQ status</inlineHelpText>
    <label>New Client Status</label>
    <type>TextArea</type>
</CustomField>