force-app/main/default/objects/Lead/fields/CompanyHQ__c.field-meta.xml
<CustomField>
    <fullName>CompanyHQ__c</fullName>
    <inlineHelpText>New client headquarters</inlineHelpText>
    <label>New Client HQ</label>
    <type>Address</type>
</CustomField>