force-app/main/default/objects/Lead/fields/Convert_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Convert_Change_Date__c</fullName>
    <inlineHelpText>New client CAGR - Revenue</inlineHelpText>
    <label>Convert Change Date</label>
    <type>Date</type>
</CustomField>