force-app/main/default/objects/Lead/fields/DBCreatedDateWithoutTime__c.field-meta.xml
<CustomField>
    <fullName>DBCreatedDateWithoutTime__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Country of incorporation</inlineHelpText>
    <label>DB Created Date Without Time</label>
    <type>Date</type>
</CustomField>