force-app/main/default/objects/Lead/fields/Discussed_with_NSL__c.field-meta.xml
<CustomField>
    <fullName>Discussed_with_NSL__c</fullName>
    <label>Discussed with NSL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>