force-app/main/default/objects/Lead/fields/Discussed_with_REL__c.field-meta.xml
<CustomField>
    <fullName>Discussed_with_REL__c</fullName>
    <label>Discussed with REL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>