force-app/main/default/objects/Lead/fields/EstimatedRevenue__c.field-meta.xml
<CustomField>
    <fullName>EstimatedRevenue__c</fullName>
    <inlineHelpText>Chairman of the new client</inlineHelpText>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>