force-app/main/default/objects/Lead/fields/ExistingServiceProviders__c.field-meta.xml
<CustomField>
    <fullName>ExistingServiceProviders__c</fullName>
    <label>Existing service providers</label>
    <type>TextArea</type>
</CustomField>