force-app/main/default/objects/Lead/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <description>This is having details of GT Expertise.</description>
    <label>Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Solution__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Expertise</valueSetName>
    </valueSet>
</CustomField>