force-app/main/default/objects/Lead/fields/FindingPartner__c.field-meta.xml
<CustomField>
    <fullName>FindingPartner__c</fullName>
    <inlineHelpText>Abbreviation used on the stock exchange to uniquely identify publicly traded shares</inlineHelpText>
    <label>Finding Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>