force-app/main/default/objects/Lead/fields/HowCanWeHelpYou__c.field-meta.xml
<CustomField>
    <fullName>HowCanWeHelpYou__c</fullName>
    <inlineHelpText>Information regarding new client from GT Website</inlineHelpText>
    <label>Channel Query Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>