force-app/main/default/objects/Lead/fields/HowDidYouArriveAThisTentativeFee__c.field-meta.xml
<CustomField>
    <fullName>HowDidYouArriveAThisTentativeFee__c</fullName>
    <label>How did you arrive at this tentative fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>