force-app/main/default/objects/Lead/fields/Independent_Director_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Independent_Director_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Independent Director Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.BOD_Flag__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Clients (Independent Director Contact Name)</relationshipLabel>
    <relationshipName>New_Clients3</relationshipName>
    <type>Lookup</type>
</CustomField>