force-app/main/default/objects/Lead/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>Industry as per CapIQ</inlineHelpText>
    <label>Industry (CAP IQ/MCA)</label>
    <type>TextArea</type>
</CustomField>