force-app/main/default/objects/Lead/fields/Investment_Bank_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Investment_Bank_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Bank Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Clients (Investment Bank Contact Name)</relationshipLabel>
    <relationshipName>New_Clients4</relationshipName>
    <type>Lookup</type>
</CustomField>