force-app/main/default/objects/Lead/fields/InvestorsPrivateEquityFirms__c.field-meta.xml
<CustomField>
    <fullName>InvestorsPrivateEquityFirms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investors / Private Equity Firms Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Investors_Private_Equity_Firms__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Clients (Investors / Private Equity Firms)</relationshipLabel>
    <relationshipName>New_Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>