force-app/main/default/objects/Lead/fields/IsTaskOpen__c.field-meta.xml
<CustomField>
    <fullName>IsTaskOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will check for Open Tasks on Client Take On Stage. We are using it in Validation Rule to display error , if user try to Convert Lead without completing the open tasks.</description>
    <inlineHelpText>Client Council Recommendations</inlineHelpText>
    <label>Is Task Open</label>
    <type>Checkbox</type>
</CustomField>