force-app/main/default/objects/Lead/fields/KMP__c.field-meta.xml
<CustomField>
    <fullName>KMP__c</fullName>
    <label>KMP</label>
    <type>TextArea</type>
</CustomField>