force-app/main/default/objects/Lead/fields/leadID__c.field-meta.xml
<CustomField>
    <fullName>leadID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>leadID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>