force-app/main/default/objects/Lead/fields/Listed__c.field-meta.xml
<CustomField>
    <fullName>Listed__c</fullName>
    <label>Listed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>