force-app/main/default/objects/Lead/fields/NewClientNo__c.field-meta.xml
<CustomField>
    <fullName>NewClientNo__c</fullName>
    <displayFormat>NCE-{000000}</displayFormat>
    <inlineHelpText>Annual revenue of the client</inlineHelpText>
    <label>New Client No.</label>
    <type>AutoNumber</type>
</CustomField>