force-app/main/default/objects/Lead/fields/NSL__c.field-meta.xml
<CustomField>
    <fullName>NSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which user has referred this lead.</description>
    <label>NSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>