force-app/main/default/objects/Lead/fields/NSLApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>NSLApprovedRejectedBy__c</fullName>
    <label>NSL Approved / Rejected By</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>