force-app/main/default/objects/Lead/fields/NSLApprovedRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>NSLApprovedRejectedDate__c</fullName>
    <label>NSL Approved / Rejected Date</label>
    <type>Date</type>
</CustomField>