force-app/main/default/objects/Lead/fields/pi__comments__c.field-meta.xml
<CustomField>
    <fullName>pi__comments__c</fullName>
    <inlineHelpText>Earnings Before Interest and Taxes</inlineHelpText>
    <label>Pardot Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>