force-app/main/default/objects/Lead/fields/ProbabilityOfWinning__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityOfWinning__c</fullName>
    <inlineHelpText>Individual responsible to take the new client engagement forward</inlineHelpText>
    <label>Probability Of Winning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>