force-app/main/default/objects/Lead/fields/Public_Private_Company__c.field-meta.xml
<CustomField>
    <fullName>Public_Private_Company__c</fullName>
    <inlineHelpText>New client prioritization</inlineHelpText>
    <label>Public/Private Company</label>
    <type>TextArea</type>
</CustomField>