force-app/main/default/objects/Lead/fields/ReadyForConverted__c.field-meta.xml
<CustomField>
    <fullName>ReadyForConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Client Council - Approved / Rejected Date</inlineHelpText>
    <label>Ready For Converted</label>
    <type>Checkbox</type>
</CustomField>