force-app/main/default/objects/Lead/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Recovery/ Low Fees</fullName>
            </value>
            <value>
                <fullName>Background check required</fullName>
            </value>
            <value>
                <fullName>Political connection</fullName>
            </value>
            <value>
                <fullName>Ambiguity regarding company</fullName>
            </value>
            <value>
                <fullName>Founder/Promoter reputation</fullName>
            </value>
            <value>
                <fullName>Channel 1 v/s Channel 2 conflict</fullName>
            </value>
            <value>
                <fullName>Market Fitment issue</fullName>
            </value>
            <value>
                <fullName>Not inline with GT way</fullName>
            </value>
            <value>
                <fullName>Other risk associated with entity</fullName>
            </value>
            <value>
                <fullName>Other Risk Concerns</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Lost client to competition</fullName>
            </value>
            <value>
                <fullName>Lost client due to pricing</fullName>
            </value>
            <value>
                <fullName>Lost client – other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>