force-app/main/default/objects/Lead/fields/sansancard__CreatedByScanToSalesforce__c.field-meta.xml
<CustomField>
    <fullName>sansancard__CreatedByScanToSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Visiting Card details</inlineHelpText>
    <label>Created by Scan to Salesforce</label>
    <type>Checkbox</type>
</CustomField>