force-app/main/default/objects/Lead/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>This is having all the sector details of GT.</description>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector</valueSetName>
    </valueSet>
</CustomField>