force-app/main/default/objects/Lead/fields/SectorCoordinator__c.field-meta.xml
<CustomField>
    <fullName>SectorCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sector Business Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>