force-app/main/default/objects/Lead/fields/ShortSummary__c.field-meta.xml
<CustomField>
    <fullName>ShortSummary__c</fullName>
    <inlineHelpText>Provide a short summary about the professional services required, or any additional remarks regarding the client</inlineHelpText>
    <label>Summary (Challenges, Opportunities etc)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>