force-app/main/default/objects/Lead/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <inlineHelpText>New client contact name</inlineHelpText>
    <label>SIC Code</label>
    <type>TextArea</type>
</CustomField>