force-app/main/default/objects/Lead/fields/Stock_Exchange_symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange_symbol__c</fullName>
    <description>Name of the exchange where the company is listed</description>
    <label>Stock Exchange symbol</label>
    <type>TextArea</type>
</CustomField>