force-app/main/default/objects/Lead/fields/SubexpertiesForDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>SubexpertiesForDuplicateRule__c</fullName>
    <label>SMEGForDuplicateRule</label>
    <type>TextArea</type>
</CustomField>